Fixed flex alignment for hero grid.

--- a/styles.css
+++ b/styles.css
@@ -206,8 +206,8 @@ h1, h2, h3 {
     width:calc(100% - 80px);
     font-size:2.3rem;
     display:flex;
-    justify-content:space-between;
-    align-items:center;
+    justify-content:center;
+    align-items:space-between;
     height:120px;
     gap:32px;
     line-height:140%;
@@ -229,6 +229,7 @@ h1, h2, h3 {
 
 .workimg1, .workimg2, .colorblock {
     width:100%;
+    height:auto;
     border-radius: 0 0 16px 16px;
     margin:0;
     padding:0;
@@ -242,6 +243,7 @@ h1, h2, h3 {
     margin:0;
     transition: transform .4s;
 }
+
 
 .herogrid > div:hover img {
     transform: scale(1.05); 
